# simply-order-tacos

./: README.md  main.py  pyproject.toml
src/classes/: Cart.py  Menu.py  __init__.py
src/db/: menu.csv
src/order_taqueria/: __init__.py  get_orders.py
src/order_taqueria.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cart.py  test_cart_add.py  test_menu.py  test_menu_get.py  test_menu_get_price.py
