[project]
name = "order_taqueria"
version = "0.0.1"
authors = [
    { name="kkig", email="example@example.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = [
    "--import-mode=importlib",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"